--- a/css/styles.css
+++ b/css/styles.css
@@ -1,356 +1,265 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-body,
-html {
-    font-family: 'Inter', sans-serif;
-    background-color: #141825;
-    
-    color: white;
-    overflow-x: hidden;
-    margin: 0;
+ body, html {
+     font-family: 'Inter', sans-serif;
+     background-color: #141825;
+     color: white;
+     overflow-x: hidden;
+     margin: 0;
 }
-.container{
-    margin: 5px;
+ .container{
+     margin: 5px;
 }
-.typograph{
-    font-size: 50px;
-    text-align: center;
-    font-weight: bolder;
-    margin: 30px;
-    font-family: cursive;
-  
-    border: solid #69656534 1px;
-    background-color: #ad32323a;
-    border-radius: 20px;
-}
-
-
-.top-nav {
-    margin-top: 18px;
-    display: flex;
-   
-    
-    padding: 12px 10px;
-    overflow:hidden;
-    font-size: 18px;
-    font-weight: medium;
-    border-radius: 5px;
-}
-
-.top-nav a{
-    
- 
-    color: rgba(221, 213, 213, 0.678);
-    padding: 12px 12px;
-    
-    text-decoration: none;
-
-
-}
-.top-nav a:hover{
-    
-    transition: 0.4s;
-
-   background-color: #1c233652;
-   border-radius: 10px;
-   
-;
-
-}
-.top-nav a.active{
-    
-    color: #d3d7d8;
-    
-    background-color: #ad323236;
-   font-weight:500; 
-   
-   border-radius: 10px;
-   
-   
-
-
-}
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
-
-h1.hline {
-    margin: auto;
-    margin-bottom: 10px;
-   
-    text-align: center;
-    width:max-content;
-    border-bottom: solid #ff00 4px;
-   
-}
-h1.hline:hover {
-    border-bottom: solid #ff7c6e69 4px;
-    transition:ease-out 0.4s;
-    
-    
-
-}
-h1.center {
-    text-align: center;
-    
-    
-
-}
-h2.center {
-    text-align: center;
-   
-    
-
-}
-h1 {
-    margin: 10px 35px 20px;
-}
-div.center {
-
-    color: #fcf9f9;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-
-}
-div.kosong {
-    margin: 20px;
-
-}
-
-.text{
-    color: white;
-    border: solid #6965652a 1px;
-    font-size: 16px;
-    padding: 14px 15px;
-    background-color: #1c2336;
-    border-radius: 10px;
-    margin-left:30px;
-    margin-right:30px;
-    margin-bottom: 30px;
-}
-.footer {
-   
-    font-size: 13px;
-    position:fixed;
-    color: white;
-    left:0;
-    bottom: 0;
-    width:  100%;
-    text-align: center;
-    padding: 12px 10px;
-    margin-top:20px;
-   
-    
-    
-    border-top: solid #69656573 1px;
-    background-color: #1c2336;
-}
-hr.jst{
-    background-color: #ad32328f;
-    border-radius: 10px;
-    width: 239px;
-    padding:5px;
-    border: none;
-    transition: width 0.3s;
-}
-
-
-hr.jst:hover{
-    width: 140px;
-}
-
-.flex {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    
-    
-}
-@media screen and(max-width:450px){
-    
-
-}
-.flex div.side{
-    display: flex;
-    flex-direction: column;
-   
-}
-.side > div {
+ .typograph{
+     font-size: 50px;
+     text-align: center;
+     font-weight: bolder;
+     margin: 30px;
+     font-family: cursive;
      border: solid #69656534 1px;
-    background-color: #ad32321a;
-    border-radius: 15px;
-    padding: 10px 12px;
-    margin: 10px;
-
+     background-color: #ad32323a;
+     border-radius: 20px;
 }
-.side > div.center-text{
-    text-align:center;
+ .top-nav {
+     margin-top: 18px;
+     display: flex;
+     padding: 12px 10px;
+     overflow:hidden;
+     font-size: 18px;
+     font-weight: medium;
+     border-radius: 5px;
 }
-.flex > div{
-   
-
-    border: solid #69656534 1px;
-    background-color: #ad32321a;
-    border-radius: 25px 5px;
-    padding: 14px 16px;
-    margin: 10px;
+ .top-nav a{
+     color: rgba(221, 213, 213, 0.678);
+     padding: 12px 12px;
+     text-decoration: none;
 }
-.flex > div:hover:not(.side) {
-    transition: 0.1s;
-    background-color: #ad323233;
-
-
+ .top-nav a:hover{
+     transition: 0.4s;
+     background-color: #1c233652;
+     border-radius: 10px;
+     ;
 }
-.side > div:hover:not(.side) {
-    transition: 0.1s;
-    background-color: #ad323233;
-
-
+ .top-nav a.active{
+     color: #d3d7d8;
+     background-color: #ad323236;
+     font-weight:500;
+     border-radius: 10px;
 }
-
-.cflex{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
+ @import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+ h1.hline {
+     margin: auto;
+     margin-bottom: 10px;
+     text-align: center;
+     width:max-content;
+     border-bottom: solid #ff00 4px;
 }
-.cflex > div img{
-    width: 170px;
+ h1.hline:hover {
+     border-bottom: solid #ff7c6e69 4px;
+     transition:ease-out 0.4s;
 }
-.ctext{
-    text-align: center;
-} 
-.cside{
-    text-align: left;
-}   
-.cflex > div{
-    width: auto;
-    
-    border: solid #69656534 1px;
-    background-color: #ad32321a;
-    border-radius: 15px 15px;
-    padding: 14px 16px;
-    margin: 10px;
-    height: auto;
-    
-    
+ h1.center {
+     text-align: center;
 }
-.cflex > div:hover{
-    background-color: #ad323257;
-    
-
+ h2.center {
+     text-align: center;
 }
-#search {
-    position: absolute;
-    right: 0%;
-    margin-right: 20px;
+ h1 {
+     margin: 10px 35px 20px;
 }
-@media all and (max-width: 800px) {
-    .top-nav {
-      
-      justify-content: space-around;
+ div.center {
+     color: #fcf9f9;
+     font-size: 50px;
+     font-weight: bold;
+     text-align: center;
+}
+ div.kosong {
+     margin: 20px;
+}
+ .text{
+     color: white;
+     border: solid #6965652a 1px;
+     font-size: 16px;
+     padding: 14px 15px;
+     background-color: #1c2336;
+     border-radius: 10px;
+     margin-left:30px;
+     margin-right:30px;
+     margin-bottom: 30px;
+}
+ .footer {
+     font-size: 13px;
+     position:fixed;
+     color: white;
+     left:0;
+     bottom: 0;
+     width: 100%;
+     text-align: center;
+     padding: 12px 10px;
+     margin-top:20px;
+     border-top: solid #69656573 1px;
+     background-color: #1c2336;
+}
+ hr.jst{
+     background-color: #ad32328f;
+     border-radius: 10px;
+     width: 239px;
+     padding:5px;
+     border: none;
+     transition: width 0.3s;
+}
+ hr.jst:hover{
+     width: 140px;
+}
+ .flex {
+     color: white;
+     display: flex;
+     flex-direction: column;
+}
+ @media screen and(max-width:450px){
+}
+ .flex div.side{
+     display: flex;
+     flex-direction: column;
+}
+ .side > div {
+     border: solid #69656534 1px;
+     background-color: #ad32321a;
+     border-radius: 15px;
+     padding: 10px 12px;
+     margin: 10px;
+}
+ .side > div.center-text{
+     text-align:center;
+}
+ .flex > div{
+     border: solid #69656534 1px;
+     background-color: #ad32321a;
+     border-radius: 25px 5px;
+     padding: 14px 16px;
+     margin: 10px;
+}
+ .flex > div:hover:not(.side) {
+     transition: 0.1s;
+     background-color: #ad323233;
+}
+ .side > div:hover:not(.side) {
+     transition: 0.1s;
+     background-color: #ad323233;
+}
+ .cflex{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     align-items: center;
+     flex-wrap: wrap;
+}
+ .cflex > div img{
+     width: 170px;
+}
+ .ctext{
+     text-align: center;
+}
+ .cside{
+     text-align: left;
+}
+ .cflex > div{
+     width: auto;
+     border: solid #69656534 1px;
+     background-color: #ad32321a;
+     border-radius: 15px 15px;
+     padding: 14px 16px;
+     margin: 10px;
+     height: auto;
+}
+ .cflex > div:hover{
+     background-color: #ad323257;
+}
+ #search {
+     position: absolute;
+     right: 0%;
+     margin-right: 20px;
+}
+ @media all and (max-width: 800px) {
+     .top-nav {
+         justify-content: space-around;
     }
-    
-  }
-@media only screen and (max-width: 500px){
-    .banner-big p{
-        text-align: center;       
-    }
-    .top-nav{
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    .cflex > div img{
-        width: 120px;
-        justify-self: baseline;
-    }
-    .top-nav a{
-        text-align: center;
-    }
-    
 }
-@media only screen and (max-width: 200px) {
-    .cflex {
-        flex-direction: row;
-        flex-wrap:wrap;
-
-        
+ @media only screen and (max-width: 500px){
+     .banner-big p{
+         text-align: center;
     }
-    
-    
-    .cflex > div {
-        width: 93%;
-        margin-left: 20px;
+     .top-nav{
+         flex-direction: row;
+         justify-content: space-around;
     }
-    .cflex > div img{
-        text-align:left;
-        float: left;
-        margin-right:15px;
-        width: 10px;
+     .cflex > div img{
+         width: 120px;
+         justify-self: baseline;
     }
-    #search{
-        display: none;
-    }
-    .top-nav a{
-        margin-left: 0px;
-        
-        
+     .top-nav a{
+         text-align: center;
     }
 }
-.banner-big{
-    height: 200px;
-    padding: 10px 12px;   
-    background-color: #ad323265;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+ @media only screen and (max-width: 200px) {
+     .cflex {
+         flex-direction: row;
+         flex-wrap:wrap;
+    }
+     .cflex > div {
+         width: 93%;
+         margin-left: 20px;
+    }
+     .cflex > div img{
+         text-align:left;
+         float: left;
+         margin-right:15px;
+         width: 10px;
+    }
+     #search{
+         display: none;
+    }
+     .top-nav a{
+         margin-left: 0px;
+    }
 }
-.banner-big p{
-    opacity: 80%;
-    margin-left: 15px;
-    font-weight: bolder;
-    padding: 20px 20px;
-    font-size: 50px;
-    background-color: #141825;
-    border-radius: 10px 50px;
-    width: fit-content;
-    
-  
-    
+ .banner-big{
+     height: 200px;
+     padding: 10px 12px;
+     background-color: #ad323265;
+     margin-bottom: 15px;
+     border-radius: 10px;
+     margin-left: 10px;
+     margin-right: 10px;
 }
-footer {
-    font-size: 15px;
-    justify-self:center;
-   
-    display: flex;
-    flex-direction:row ;
-    font-size: 13px;
- 
-   
-    color: white;
-    
-    text-align: left;
-    padding: 50px 10px;
-    margin-bottom:0;
-    
-   
-    
-    
-    border-top: solid #69656573 1px;
-    background-color: #1c2336;
+ .banner-big p{
+     opacity: 80%;
+     margin-left: 15px;
+     font-weight: bolder;
+     padding: 20px 20px;
+     font-size: 50px;
+     background-color: #141825;
+     border-radius: 10px 50px;
+     width: fit-content;
 }
-footer > div{
-    margin: auto;
-    line-height: 70%;
-    
+ footer {
+     font-size: 15px;
+     justify-self:center;
+     display: flex;
+     flex-direction:row ;
+     font-size: 13px;
+     color: white;
+     text-align: left;
+     padding: 50px 10px;
+     margin-bottom:0;
+     border-top: solid #69656573 1px;
+     background-color: #1c2336;
 }
-footer >  div h2 {
-        
-    
-    font-weight: bolder;
-    line-height: 10 0%;
-    color:#ad3232;
-
-    
+ footer > div{
+     margin: auto;
+     line-height: 70%;
+}
+ footer > div h2 {
+     font-weight: bolder;
+     line-height: 10 0%;
+     color:#ad3232;
 }
